--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ stdenv-rhel7-repo/build.pwd
 stdenv-rhel7-repo/build.pwi
 stdenv-rhel7-repo/nohup.out
 stdenv-redhatrepo/nohup.out
+stdenv-rhel7-repo-delta/nohup.out
