--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ stdenv-rhel7-repo/build.pwi
 stdenv-rhel7-repo/nohup.out
 stdenv-redhatrepo/nohup.out
 stdenv-rhel7-repo-delta/nohup.out
+stdenv-rhelrepo/nohup.out
