--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ stdenv-rhel7-repo/nohup.out
 stdenv-redhatrepo/nohup.out
 stdenv-rhel7-repo-delta/nohup.out
 stdenv-rhelrepo/nohup.out
+stdenv-rhel7-delta/nohup.out
